Fix overflow problem in featured-items class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,7 @@ footer {
   .featured-items {
     margin: auto;
     justify-content: center;
+    overflow: hidden;
   }
 
   .item {
